--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "outDir": "dist/lib",
     "typeRoots": ["node_modules/@types"]
   },
-  "include": ["js-object-literal-parse.ts"]
+  "include": ["object-literal-parse.ts"]
 }
