--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/mbest/js-object-literal-parse#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.1",
     "lodash.camelcase": "^4.3.0",
     "rollup": "^2.32.1",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -31,6 +33,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-typescript2": "^0.28.0",
+    "ts-jest": "^26.4.2",
     "typescript": "^4.0.3"
   }
 }
